feat: remove username field
